# logi-hex

./: .gitignore  LICENSE  README.md  alembic.ini  check_db.py  main.py  pyproject.toml
adapters/api/: __init__.py  dependencies.py  dev_routes.py  routes.py  routes_auth.py  routes_clients.py  routes_config.py  routes_containers.py  routes_movements.py  routes_summary.py  routes_tracking.py
adapters/ui/: routes.py
alembic/: env.py
alembic/versions/: 1bdd180ab367_v1_fresh_schema.py  3f853d3fb516_baseline.py  ae3f7333c31f_add_notes_to_transactions.py
application/: facades.py
application/facades/: __init__.py  _base.py  accounts.py  clients.py  inventory.py  items.py  movements.py  tags.py  workspaces.py
composition/: container.py
docs/: DEPRECATION.md  LANGUAGE.md  TESTING.md  V1-SCOPE.md  overview.md
domain/: entities.py  exceptions.py  language.py  ports.py  services.py
domain/entities/: __init__.py  accounts.py  inventory.py  tags.py  workspaces.py
domain/exceptions/: __init__.py  accounts.py  inventory.py  shared.py
domain/language/: __init__.py  accounts.py  inventory.py  shared.py  suggestions.py
domain/ports/: __init__.py  accounts.py  inventory.py  movements.py  shared.py  workspaces.py
domain/services/: __init__.py  _guards.py  accounts.py  clients.py  inventory.py  item_groups.py  items.py  tags.py  workspaces.py
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: app.vue
infrastructure/: config.py  sqlite_repo.py  uow.py
infrastructure/db/: config.py  (+1 more)
tests/: conftest.py
tools/: rg.py
(+164 files in other folders)
